--- a/app/config.json
+++ b/app/config.json
@@ -1,7 +1,13 @@
 {
-  "name": "Hamish Williams",
+  "name": "Himanshu Thakur",
   "role": "Designer",
-  "disciplines": ["Developer", "Prototyper", "Animator", "Illustrator", "Modder"],
+  "disciplines": [
+    "Developer",
+    "Prototyper",
+    "Animator",
+    "Illustrator",
+    "Modder"
+  ],
   "url": "https://hamishw.com",
   "twitter": "@hamishMW",
   "figma": "@Hamish",
