--- a/app/config.json
+++ b/app/config.json
@@ -1,12 +1,13 @@
 {
   "name": "Himanshu Thakur",
-  "role": "Designer",
+  "role": "Developer",
   "disciplines": [
-    "Developer",
-    "Prototyper",
-    "Animator",
-    "Illustrator",
-    "Modder"
+    "MERN Stack",
+    "Python",
+    "Flutter",
+    "Deep Learning",
+    "Salesforce",
+    "Devops"
   ],
   "url": "https://hamishw.com",
   "twitter": "@hamishMW",
