updated email and social icons

--- a/app/config.json
+++ b/app/config.json
@@ -10,9 +10,9 @@
     "Devops"
   ],
   "url": "https://hamishw.com",
-  "twitter": "@hamishMW",
-  "figma": "@Hamish",
-  "github": "HamishMW",
+  "twitter": "@@Fabulous_7781",
+  "figma": "@himanshu-thakur-9582631a6",
+  "github": "himanshu-thakur-7",
   "repo": "https://github.com/HamishMW/portfolio",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
 }
