--- a/app/config.json
+++ b/app/config.json
@@ -6,6 +6,7 @@
     "Python",
     "Flutter",
     "Deep Learning",
+    "Rust",
     "Salesforce",
     "Devops"
   ],
@@ -13,6 +14,6 @@
   "twitter": "@@Fabulous_7781",
   "figma": "@himanshu-thakur-9582631a6",
   "github": "himanshu-thakur-7",
-  "repo": "https://github.com/HamishMW/portfolio",
+  "repo": "https://github.com/himanshu-thakur-7/PortfolioWebsite",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
 }
