--- a/app/config.json
+++ b/app/config.json
@@ -10,7 +10,7 @@
     "Salesforce",
     "Devops"
   ],
-  "url": "https://hamishw.com",
+  "url": "https://himanshu-thakur.pages.dev/",
   "twitter": "@@Fabulous_7781",
   "figma": "@himanshu-thakur-9582631a6",
   "github": "himanshu-thakur-7",
