--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://hamishw.com",
+  "homepage": "https://himanshu-thakur.pages.dev/",
   "description": "Portfolio site for Himanshu Thakur",
   "repository": "https://github.com/HamishMW/portfolio.git",
   "author": "Himanshu Thakur",
